--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "outDir": "build/", 
+        "outDir": "build-es6/", 
         "sourceMap": true, 
         "target": "es6"
     }, 
     "files": [
-        "src/visualizer.ts"
+        "src/visualizer.ts",
+        "src/test/visualizer-test.ts"
     ]
 }
