--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
   },
   "devDependencies": {
     "babel-runtime": "latest",
-    "browserify": "latest",
     "babelify": "latest",
+    "browserify": "latest",
     "chai": "latest",
     "graphlib": "latest",
     "gulp": "latest",
     "gulp-sourcemaps": "latest",
+    "gulp-typescript": "^2.7.6",
     "gulp-util": "latest",
+    "merge2": "^0.3.5",
     "mocha": "latest",
+    "sorcery": "^0.6.3",
+    "ts-loader": "^0.5.0",
+    "typescript-require": "^0.2.9",
     "underscore": "latest",
     "vinyl-buffer": "latest",
     "vinyl-source-stream": "latest",
