--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-        "outDir": "build-es6/", 
+        "outDir": "build/", 
         "sourceMap": true, 
-        "target": "es6"
+        "target": "es6",
+		"noLib": true
     }, 
     "files": [
+        "typings/tsd.d.ts",
         "src/visualizer.ts",
         "src/test/visualizer-test.ts"
     ]
