--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babelify": "latest",
     "browserify": "latest",
     "chai": "latest",
+    "eventemitter3": "^1.1.1",
     "graphlib": "latest",
     "gulp": "latest",
     "gulp-sourcemaps": "latest",
@@ -38,6 +39,8 @@
     "gulp-util": "latest",
     "merge2": "^0.3.5",
     "mocha": "latest",
+    "socket.io": "^1.3.7",
+    "socket.io-rpc": "^0.9.9",
     "sorcery": "^0.6.3",
     "ts-loader": "^0.5.0",
     "typescript-require": "^0.2.9",
