--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/TobiaszCudnik/asyncmachineVisualizer/issues"
   },
-  "homepage": "https://github.com/TobiaszCudnik/asyncmachineVisualizer",
+  "homepage": "https://github.com/TobxiaszCudnik/asyncmachineVisualizer",
   "scripts": {
     "test": "grunt test"
   },
@@ -27,26 +27,34 @@
     "lodash": "latest"
   },
   "devDependencies": {
-    "babel-runtime": "latest",
-    "babelify": "latest",
-    "browserify": "latest",
-    "chai": "latest",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "latest",
+    "babelify": "^7.2.0",
+    "browserify": "^11.0.0",
+    "chai": "^3.0.0",
+    "chai-xml": "^0.3.0",
+    "del": "^2.0.2",
     "eventemitter3": "^1.1.1",
-    "graphlib": "latest",
-    "gulp": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-typescript": "^2.7.6",
-    "gulp-util": "latest",
-    "merge2": "^0.3.5",
-    "mocha": "latest",
-    "socket.io": "^1.3.7",
-    "socket.io-rpc": "^0.9.9",
-    "sorcery": "^0.6.3",
-    "ts-loader": "^0.5.0",
-    "typescript-require": "^0.2.9",
-    "underscore": "latest",
-    "vinyl-buffer": "latest",
-    "vinyl-source-stream": "latest",
-    "watchify": "latest"
+    "gulp": "^3.9.0",
+    "gulp-babel": "6.0.0",
+    "gulp-help": "^1.6.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-shell": "^0.4.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.9.2",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "jsondiffpatch": "latest",
+    "mocha": "^2.2.5",
+    "sinon": "^1.17.2",
+    "sorcery": "^0.8.0",
+    "tsd": "^0.6.3",
+    "typedoc": "^0.3.10",
+    "typescript": "^1.6.2",
+    "typescript-require": "^0.2.9-1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.0",
+    "webcola": "^3.1.3"
   }
 }
