--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
     "gulp-util": "^3.0.7",
     "jsondiffpatch": "latest",
     "mocha": "^2.2.5",
+    "node-uuid": "^1.4.7",
     "sinon": "^1.17.2",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "sorcery": "^0.8.0",
     "tsd": "^0.6.3",
     "typedoc": "^0.3.10",
     "typescript": "^1.6.2",
     "typescript-require": "^0.2.9-1",
+    "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0",
