--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
     "compilerOptions": {
         "outDir": "build/",
         "sourceMap": true,
-        "target": "es6",
-        "module": "es6"
+        "target": "es5",
+        "module": "commonjs"
     }, 
     "files": [
         "typings/tsd.d.ts",
-        "src/d3stategraph.ts"
+        "src/client.ts",
+        "src/server.ts",
+        "src/logger.ts"
     ]
 }
