--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asyncmachineVisualizer",
+  "name": "asyncmachine-visualizer",
   "version": "0.0.1",
   "description": "",
   "author": "Tobiasz Cudnik",
@@ -11,7 +11,6 @@
   "bugs": {
     "url": "https://github.com/TobiaszCudnik/asyncmachineVisualizer/issues"
   },
-  "homepage": "https://github.com/TobxiaszCudnik/asyncmachineVisualizer",
   "scripts": {
     "test": "grunt test"
   },
@@ -50,7 +49,6 @@
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
     "sorcery": "^0.8.0",
-    "tsd": "^0.6.3",
     "typedoc": "^0.3.10",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
