--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "gulp-typescript": "^2.13.4",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
+    "jointjs": "^0.9.10",
     "jsondiffpatch": "latest",
     "mocha": "^2.2.5",
     "node-uuid": "^1.4.7",
     "sinon": "^1.17.2",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
-    "sorcery": "^0.8.0",
+    "sorcery": "^0.10.0",
     "typedoc": "^0.3.10",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
