--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "sorcery": "^0.10.0",
+    "throttle-debounce": "^1.0.1",
     "typedoc": "^0.3.10",
     "typescript": "^2.0.0",
     "underscore": "^1.8.3",
