resurected Cola UI added data dumps added support for data dumps server supports UI before the logger small fixes

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "main": "build/logger.js",
+  "browser": "build/ui.js",
   "dependencies": {
-    "asyncmachine": "^2",
-    "d3": "latest",
+    "asyncmachine": "^3.0.0",
+    "d3": "^3.1.0",
     "lodash": "latest",
     "material-ui": "^0.15.4",
     "node-uuid": "latest",
