--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "d3": "^3.1.0",
     "lodash": "latest",
     "material-ui": "^0.15.4",
+    "md5": "^2.2.1",
+    "morphdom": "^2.2.0",
     "node-uuid": "latest",
     "stylesheet.js": "^1.1.1"
   },
@@ -35,6 +37,7 @@
     "browserify": "^13.1.0",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
+    "ciena-dagre": "^1.0.0",
     "deepcopy": "^0.6.3",
     "del": "^2.0.2",
     "eventemitter3": "^1.1.1",
@@ -48,7 +51,7 @@
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
-    "jointjs": "^0.9.10",
+    "jointjs": "^1.0.0",
     "jsondiffpatch": "latest",
     "mocha": "^2.2.5",
     "node-uuid": "^1.4.7",
