--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "asyncmachine": "^3.0.0",
     "d3": "^3.1.0",
+    "json-loader": "^0.5.4",
     "lodash": "latest",
     "material-ui": "^0.15.4",
     "md5": "^2.2.1",
