--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "outDir": "build/",
         "sourceMap": true,
-        "target": "es6",
-        "module": "commonjs",
+        "target": "es2017",
+        "module": "es6",
         "allowJs": true,
         "lib": ["es7", "dom", "es6"],
         "jsx": "react"
