--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "stylesheet.js": "^1.1.1"
   },
   "devDependencies": {
+    "acorn": "^4.0.3",
+    "awesome-typescript-loader": "^3.0.0-beta.3",
     "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "latest",
     "babelify": "^7.2.0",
@@ -71,6 +73,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.0",
-    "webcola": "^3.1.3"
+    "webcola": "^3.1.3",
+    "webpack": "^2.1.0-beta.23",
+    "webpack-async-await": "^1.1.0"
   }
 }
