--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "compilerOptions": {
-        "outDir": "build/",
         "sourceMap": true,
         "target": "es2017",
-        "module": "es6",
+        "module": "commonjs",
         "allowJs": true,
         "lib": ["es7", "dom", "es6"],
         "jsx": "react"
@@ -18,6 +17,7 @@
     "awesomeTypescriptLoaderOptions": {
       "useTranspileModule": true,
       "transpileOnly": true,
-      "useCache": true
+      "useCache": true,
+        "module": "es6"
     }
 }
