--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "watchify": "^3.3.0",
     "webcola": "^3.1.3",
     "webpack": "^2.1.0-beta.23",
-    "webpack-async-await": "^1.1.0"
+    "webpack-async-await": "^1.1.0",
+    "worker-loader": "^0.7.1"
   }
 }
