--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,15 @@
         "target": "es2017",
         "module": "commonjs",
         "allowJs": true,
-        "lib": ["es7", "dom", "es6"],
+        "lib": ["es6", "es7", "dom"],
         "jsx": "react"
     }, 
     "files": [
         "typings/index.d.ts",
         "src/server/server.ts",
         "src/logger.ts",
-        "src/network.ts",
-        "src/ui/web.tsx"
+        "src/ui/web.tsx",
+        "src/ui/worker-layout.ts"
     ],
     "awesomeTypescriptLoaderOptions": {
       "useTranspileModule": true,
