--- a/package.json
+++ b/package.json
@@ -21,42 +21,33 @@
   "main": "build/logger.js",
   "browser": "build/ui.js",
   "dependencies": {
-    "asyncmachine": "^3.1.0",
-    "d3": "^3.1.0",
+    "asyncmachine": "latest",
     "json-loader": "^0.5.4",
     "lodash": "latest",
     "material-ui": "^0.15.4",
     "md5": "^2.2.1",
-    "morphdom": "^2.2.0",
     "node-uuid": "latest",
     "stylesheet.js": "^1.1.1"
   },
   "devDependencies": {
     "acorn": "^4.0.3",
     "awesome-typescript-loader": "^3.0.0-beta.3",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "latest",
-    "babelify": "^7.2.0",
     "browserify": "^13.1.0",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
-    "ciena-dagre": "^1.0.0",
     "dagre": "^0.7.4",
     "deepcopy": "^0.6.3",
     "del": "^2.0.2",
     "eventemitter3": "^1.1.1",
     "graphs": "TobiaszCudnik/graphs",
     "gulp": "^3.9.0",
-    "gulp-babel": "6.0.0",
     "gulp-help": "^1.6.1",
     "gulp-plumber": "^1.0.1",
     "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
-    "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
-    "jointjs": "^1.0.0",
-    "jsondiffpatch": "latest",
+    "jointjs": "TobiaszCudnik/joint",
+    "jsondiffpatch": "TobiaszCudnik/jsondiffpatch",
     "mocha": "^2.2.5",
     "node-uuid": "^1.4.7",
     "random-number": "0.0.7",
@@ -65,17 +56,19 @@
     "sinon": "^1.17.2",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
-    "sorcery": "^0.10.0",
     "throttle-debounce": "^1.0.1",
-    "typedoc": "^0.3.10",
-    "typescript": "^2.0.0",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0",
-    "webcola": "^3.1.3",
     "webpack": "^2.1.0-beta.23",
     "webpack-async-await": "^1.1.0",
-    "worker-loader": "^0.7.1"
+    "workerio": "^0.2.1"
+  },
+  "peerDependencies": {
+    "d3": "^3.1.0",
+    "webcola": "^3.1.3",
+    "typescript": "^2.2.0",
+    "babel-polyfill": "^6.0.16",
+    "babel-preset-es2015": "latest"
   }
 }
