--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "gulp-util": "^3.0.7",
     "jointjs": "TobiaszCudnik/joint",
     "jsondiffpatch": "TobiaszCudnik/jsondiffpatch",
+    "material-ui": "^0.17.4",
     "mocha": "^2.2.5",
     "node-uuid": "^1.4.7",
     "random-number": "0.0.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-tap-event-plugin": "^2.0.1",
     "sinon": "^1.17.2",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
