--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dagre": "^0.7.4",
     "deepcopy": "^0.6.3",
     "del": "^2.0.2",
+    "download-as-file": "^1.1.0",
     "eventemitter3": "^1.1.1",
     "graphs": "TobiaszCudnik/graphs",
     "gulp": "^3.9.0",
@@ -61,6 +62,7 @@
     "socket.io-client": "^1.4.8",
     "throttle-debounce": "^1.0.1",
     "underscore": "^1.8.3",
+    "upload-element": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^2.1.0-beta.23",
