--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "url": "https://github.com/TobiaszCudnik/asyncmachine-inspector/issues"
   },
   "scripts": {
-    "test": "grunt test"
   },
   "license": "MIT",
   "engines": {
@@ -71,8 +70,6 @@
   "peerDependencies": {
     "d3": "^3.1.0",
     "webcola": "^3.1.3",
-    "typescript": "^2.2.0",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "latest"
+    "typescript": "^2.5.0"
   }
 }
