--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "files": [
         "typings/index.d.ts",
         "src/server/server.ts",
-        "src/logger.ts",
-        "src/ui/web.tsx",
+        "src/logger-client.ts",
+        "src/ui/inspector.tsx",
         "src/ui/worker-layout.ts",
         "test/ui-joint/mock-logger.ts",
         "test/ui-joint/mock-server.ts"
