--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "bugs": {
     "url": "https://github.com/TobiaszCudnik/asyncmachine-inspector/issues"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
@@ -31,7 +30,6 @@
   "devDependencies": {
     "acorn": "^4.0.3",
     "awesome-typescript-loader": "^3.0.0-beta.3",
-    "browserify": "^13.1.0",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
     "dagre": "^0.7.4",
@@ -51,7 +49,6 @@
     "material-ui": "^0.17.4",
     "mocha": "^2.2.5",
     "nesh": "^1.7.0",
-    "node-uuid": "^1.4.7",
     "random-number": "0.0.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -61,10 +58,12 @@
     "socket.io-client": "^1.4.8",
     "underscore": "^1.8.3",
     "upload-element": "^1.0.1",
+    "uuid": "^3.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^2.1.0-beta.23",
     "webpack-async-await": "^1.1.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "workerio": "^0.2.1"
   },
   "peerDependencies": {
