--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "asyncmachine": "latest",
     "json-loader": "^0.5.4",
+    "keymaster": "^1.6.2",
     "lodash": "latest",
     "material-ui": "^0.15.4",
     "md5": "^2.2.1",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "acorn": "^4.0.3",
-    "awesome-typescript-loader": "^3.0.0-beta.3",
+    "awesome-typescript-loader": "^3.2.3",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
     "dagre": "^0.7.4",
@@ -61,7 +62,7 @@
     "uuid": "^3.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "webpack": "^2.1.0-beta.23",
+    "webpack": "^3.8.1",
     "webpack-async-await": "^1.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "workerio": "^0.2.1"
@@ -69,6 +70,6 @@
   "peerDependencies": {
     "d3": "^3.1.0",
     "webcola": "^3.1.3",
-    "typescript": "^2.5.0"
+    "typescript": "^2.5.3"
   }
 }
