css as modules fixed console warnings

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "awesome-typescript-loader": "^3.2.3",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
+    "css-loader": "^0.28.7",
     "dagre": "^0.7.4",
     "deepcopy": "^0.6.3",
     "del": "^2.0.2",
@@ -57,6 +58,7 @@
     "sinon": "^1.17.2",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
+    "style-loader": "^0.19.0",
     "underscore": "^1.8.3",
     "upload-element": "^1.0.1",
     "uuid": "^3.1.0",
