--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "sourceMap": true,
         "target": "es2017",
-        "module": "commonjs",
-        "allowJs": true,
+//        "module": "commonjs",
+        "module": "es6",
+//        "allowJs": true,
         "lib": ["es6", "es7", "dom"],
         "jsx": "react"
     }, 
