--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es2017",
 //        "module": "commonjs",
         "module": "es6",
-//        "allowJs": true,
+        "allowJs": true,
         "lib": ["es6", "es7", "dom"],
         "jsx": "react"
     }, 
