commonjs & es6 build targets webworker is now optional stackblitz compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,6 @@
     "awesomeTypescriptLoaderOptions": {
       "useTranspileModule": true,
       "transpileOnly": true,
-      "useCache": true,
-        "module": "es6"
+      "useCache": true
     }
 }
