--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "webpack": "^3.8.1",
     "webpack-async-await": "^1.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-shell-plugin": "^0.5.0",
     "workerio": "^0.2.1"
   },
   "peerDependencies": {
