--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asyncmachine-inspector",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Live inspector for asyncmachine graphs",
   "author": "Tobiasz Cudnik",
   "repository": {
     "type": "git",
@@ -16,19 +16,17 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "main": "build/logger.js",
-  "browser": "build/ui.js",
+  "main": "dist/logger-file.umd.js",
+  "browser": "dist/inspector.umd.js",
   "dependencies": {
-    "asyncmachine": "latest",
-    "json-loader": "^0.5.4",
-    "keymaster": "^1.6.2",
-    "lodash": "latest",
-    "material-ui": "^0.15.4",
-    "md5": "^2.2.1",
-    "node-uuid": "latest",
-    "stylesheet.js": "^1.1.1"
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
+    "asyncmachine": "^3.1.0",
+    "keymaster": "^1.6.2",
+    "lodash": "latest",
+    "md5": "^2.2.1",
+    "stylesheet.js": "^1.1.1",
     "acorn": "^4.0.3",
     "awesome-typescript-loader": "^3.2.3",
     "chai": "^3.0.0",
@@ -40,23 +38,16 @@
     "download-as-file": "^1.1.0",
     "eventemitter3": "^1.1.1",
     "graphs": "TobiaszCudnik/graphs",
-    "gulp": "^3.9.0",
-    "gulp-help": "^1.6.1",
-    "gulp-plumber": "^1.0.1",
-    "gulp-shell": "^0.4.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7",
     "jointjs": "TobiaszCudnik/joint",
     "jsondiffpatch": "TobiaszCudnik/jsondiffpatch",
     "material-ui": "^0.17.4",
     "mocha": "^2.2.5",
-    "nesh": "^1.7.0",
     "random-number": "0.0.7",
     "react": "^15.3.0",
+    "json-loader": "^0.5.4",
     "react-dom": "^15.3.0",
     "react-tap-event-plugin": "^2.0.1",
     "sinon": "^1.17.2",
-    "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
     "style-loader": "^0.19.0",
     "underscore": "^1.8.3",
@@ -68,11 +59,11 @@
     "webpack-async-await": "^1.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-shell-plugin": "^0.5.0",
-    "workerio": "^0.2.1"
+    "workerio": "TobiaszCudnik/workerio",
+    "typescript": "^2.5.3"
   },
   "peerDependencies": {
     "d3": "^3.1.0",
-    "webcola": "^3.1.3",
-    "typescript": "^2.5.3"
+    "webcola": "^3.1.3"
   }
 }
