--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "bugs": {
     "url": "https://github.com/TobiaszCudnik/asyncmachine-inspector/issues"
   },
-  "scripts": {},
+  "scripts": {
+    "prepublish": "make publish"
+  },
   "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
