--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "json-loader": "^0.5.4",
     "jsondiffpatch": "TobiaszCudnik/jsondiffpatch",
     "keymaster": "^1.6.2",
-    "lodash": "latest",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.4",
     "md5": "^2.2.1",
     "mocha": "^2.2.5",
