--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asyncmachine-inspector",
-  "version": "0.2.1",
+  "version": "0.2.1-1",
   "description": "Live inspector for asyncmachine graphs",
   "author": "Tobiasz Cudnik",
   "repository": {
@@ -30,7 +30,7 @@
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
     "css-loader": "^0.28.7",
-    "dagre": "^0.7.4",
+    "ciena-dagre": "^1.0.10",
     "deepcopy": "^0.6.3",
     "del": "^2.0.2",
     "download-as-file": "^1.1.0",
