--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "files": [
         "typings/index.d.ts",
         "src/server/server.ts",
-        "src/logger-client.ts",
+      "src/logger/server-file.ts",
         "src/ui/inspector.tsx",
         "src/ui/worker-layout.ts",
         "test/ui-joint/mock-logger.ts",
