string-based worker minified builds some reorganizations

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /src/**/*.js
 /src/**/*.d.ts
 /src/**/*.js.map
-!/src/vendor/**/*.js
+!/src/inspector/joint/vendor/**/*.js
 /test/**/*.js
 /test/**/*.d.ts
 /test/**/*.js.map
