--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "acorn": "^4.0.3",
     "asyncmachine": "^3.1.0",
     "awesome-typescript-loader": "^3.2.3",
-    "deepmerge": "^2.0.1",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
     "ciena-dagre": "^1.0.10",
     "css-loader": "^0.28.7",
     "deepcopy": "^0.6.3",
+    "deepmerge": "^2.0.1",
     "del": "^2.0.2",
     "download-as-file": "^1.1.0",
     "eventemitter3": "^1.1.1",
@@ -59,6 +59,7 @@
     "md5": "^2.2.1",
     "mocha": "^2.2.5",
     "random-number": "0.0.7",
+    "raw-loader": "^0.5.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-tap-event-plugin": "^2.0.1",
@@ -67,6 +68,7 @@
     "style-loader": "^0.19.0",
     "stylesheet.js": "^1.1.1",
     "typescript": "^2.5.3",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "underscore": "^1.8.3",
     "upload-element": "^1.0.1",
     "uuid": "^3.1.0",
