--- a/examples/file-logger/package.json
+++ b/examples/file-logger/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "stackblitz-demo",
+  "name": "asyncmachine-file-logger-example",
+  "desc": "AsyncMachine File Logger Example",
   "version": "1.0.0",
   "description": "",
   "main": "am_demo.umd.js",
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "delay": "^2.0.0",
-    "random-int": "^1.0.0",
-    "lodash": "^4.17.4"
+    "asyncmachine-logger": "^0.3.0-dev1"
   }
 }
