--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asyncmachine-inspector",
   "version": "0.3.0-dev1",
-  "description": "Inspector / debugger for the asyncmachine",
+  "description": "Inspector and a debugger for the asyncmachine",
   "author": "Tobiasz Cudnik",
   "repository": {
     "type": "git",
