--- a/examples/remote-browser-logger/package.json
+++ b/examples/remote-browser-logger/package.json
@@ -7,8 +7,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-inspector": "^0.3.0-dev1",
-    "asyncmachine-logger": "^0.3.0-dev1",
-    "asyncmachine-server": "^0.3.0-dev1"
+    "asyncmachine-inspector-server": "latest",
+    "asyncmachine-inspector-logger": "latest"
   }
 }
