--- a/pkg/inspector/package.json
+++ b/pkg/inspector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asyncmachine-inspector",
   "version": "0.3.1-dev1",
-  "description": "Inspector and a debugger for the asyncmachine",
+  "description": "Inspector and a debugger for the Asyncmachine",
   "author": "Tobiasz Cudnik",
   "repository": {
     "type": "git",
