--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "asyncmachine-inspector",
+  "name": "asyncmachine-inspector-server",
   "version": "0.3.0-dev2",
-  "description": "Server component for AsyncMachine Inspector",
+  "description": "Server component for the AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
     "type": "git",
@@ -31,8 +31,7 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "main": "dist/am_logger-file.umd.js",
-  "browser": "dist/am_inspector.umd.js",
+  "main": "server/server.js",
   "dependencies": {
     "socket.io": "^1.4.8"
   }
