--- a/examples/remote-browser-logger/package.json
+++ b/examples/remote-browser-logger/package.json
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-inspector-inspector": "0.3.1-dev1",
+    "asyncmachine-inspector": "0.3.1-dev1",
     "asyncmachine-inspector-logger": "0.3.1-dev1",
     "asyncmachine-inspector-server": "0.3.1-dev1",
     "httpserver": "^0.3.0",
