--- a/examples/file-logger/package.json
+++ b/examples/file-logger/package.json
@@ -7,6 +7,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-logger": "^0.3.1-dev1"
+    "asyncmachine-logger": "^0.3.1-dev1",
+    "asyncmachine-server": "^0.3.1-dev1",
+    "asyncmachine-inspector": "^0.3.1-dev1",
+    "asyncmachine": "latest"
   }
 }
