--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -29,7 +29,7 @@
     "node": ">=0.10.0"
   },
   "main": "am-logger.cjs.js",
-  "browser": "am-logger.umd.js",
+  "browser": "browser.js",
   "dependencies": {
     "socket.io-client": "^2.0.4"
   }
