--- a/examples/standalone-inspector/package.json
+++ b/examples/standalone-inspector/package.json
@@ -7,6 +7,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-logger": "^0.3.1-dev1"
+    "asyncmachine-logger": "^0.3.1"
   }
 }
