--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asyncmachine-inspector",
-  "version": "0.3.1-dev1",
+  "version": "0.3.1",
   "description": "Inspector and a debugger for the asyncmachine",
   "author": "Tobiasz Cudnik",
   "repository": {
