--- a/examples/standalone-inspector/package.json
+++ b/examples/standalone-inspector/package.json
@@ -1,12 +1,12 @@
 {
   "name": "asyncmachine-standalone-inspector",
-  "desc": "AsyncMachine File Logger Example",
+  "desc": "Standalone AsyncMachine Inspector Example",
   "version": "1.0.0",
   "description": "",
   "main": "am_demo.umd.js",
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-logger": "^0.3.1"
+    "asyncmachine-inspector": "^0.3.3"
   }
 }
