--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asyncmachine-inspector-logger",
-  "version": "0.3.0-dev1",
+  "version": "0.3.4",
   "description": "Logger component for the AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
