--- a/examples/remote-browser-logger/package.json
+++ b/examples/remote-browser-logger/package.json
@@ -10,9 +10,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "asyncmachine-inspector": "0.3.1",
-    "asyncmachine-inspector-logger": "0.3.1",
-    "asyncmachine-inspector-server": "0.3.1",
+    "asyncmachine-inspector": "^0.3.3",
+    "asyncmachine-inspector-logger": "^0.3.3",
+    "asyncmachine-inspector-server": "^0.3.3",
     "httpserver": "^0.3.0",
     "asyncmachine": "latest"
   }
