--- a/examples/remote-server-logger/package.json
+++ b/examples/remote-server-logger/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "asyncmachine-inspector": "^0.3.3",
-    "asyncmachine-inspector-logger": "^0.3.3",
-    "asyncmachine-inspector-server": "^0.3.3",
-    "asyncmachine": "latest"
+    "ami-logger": "^0.3.3",
+    "ami-server": "^0.3.3",
+    "asyncmachine": "^3.2"
   }
 }
