--- a/examples/restaurant/package.json
+++ b/examples/restaurant/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asyncmachine-inspector-example-restaurant",
+  "name": "ami-example-restaurant",
   "description": "Asyncmachine Inspector Restaurant Example",
   "version": "1.0.0",
   "author": "Tobiasz Cudnik",
