--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "asyncmachine-inspector-server",
-  "version": "0.3.4",
+  "name": "ami-server",
+  "version": "0.3.5",
   "description": "Server component for the AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
