Heavy rendering optimizations: - use indexeddb instead of generating a diff between the ui and the worker - inherit existing patches for rendering a single step - load a snapshot in a bulk - refactored rendering cancellation - optimized graph model updates - generate classes for graph elements in the views - optimized class diff updates Fixed asyncmachine dependency

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "browser": "dist/am_inspector.umd.js",
   "dependencies": {
     "@types/socket.io-client": "^1.4.32",
+    "deep-copy": "^1.4.1",
+    "delay": "^2.0.0",
+    "idb-keyval": "^2.3.0",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
