--- a/pkg/inspector/package.json
+++ b/pkg/inspector/package.json
@@ -33,8 +33,9 @@
   },
   "main": "am-inspector.umd.js",
   "dependencies": {
-    "asyncmachine-inspector-server": "^0.3.1",
+    "ami-server": "^0.3.1",
     "commander": "^2.12.2",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "graphs-tob": "^2.0.0"
   }
 }
