--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -31,6 +31,9 @@
   "main": "logger.js",
   "browser": "browser.js",
   "dependencies": {
+    "eventemitter3": "^1.1.1",
+    "uuid": "^3.1.0",
+    "graphs-tob": "^2.0.0",
     "socket.io-client": "^2.0.4"
   }
 }
