--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ami-server",
-  "version": "0.3.7",
-  "description": "Server component for the AsyncMachine Inspector",
+  "version": "0.3.7-1",
+  "description": "Server component for AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
     "type": "git",
