--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ami-logger",
-  "version": "0.3.7-1",
+  "version": "0.3.8",
   "description": "Logger component for AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
