--- a/pkg/server/package.json
+++ b/pkg/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ami-server",
-  "version": "0.3.7-1",
+  "version": "0.3.8",
   "description": "Server component for AsyncMachine Inspector",
   "author": "Tobiasz Cudnik",
   "repository": {
