--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "deep-copy": "^1.4.1",
     "delay": "^2.0.0",
     "idb-keyval": "^2.3.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "await-semaphore": "latest"
   },
   "devDependencies": {
     "acorn": "^4.0.3",
