--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "browser": "dist/am_inspector.umd.js",
   "dependencies": {
     "@types/socket.io-client": "^1.4.32",
+    "await-semaphore": "latest",
     "deep-copy": "^1.4.1",
     "delay": "^2.0.0",
+    "hex-rgb": "^2.0.0",
     "idb-keyval": "^2.3.0",
+    "simple-random-id": "latest",
     "socket.io": "^1.4.8",
-    "await-semaphore": "latest"
+    "workerpool": "^2.3.0"
   },
   "devDependencies": {
     "acorn": "^4.0.3",
