--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "webpack-async-await": "^1.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-shell-plugin": "^0.5.0",
-    "workerio": "github:TobiaszCudnik/workerio"
+    "workerio": "github:TobiaszCudnik/workerio",
+    "moment": "latest"
   },
   "prettier": {
     "singleQuote": true,
