--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "delay": "^2.0.0",
     "hex-rgb": "^2.0.0",
     "idb-keyval": "^2.3.0",
+    "radians-degrees": "^1.0.0",
     "simple-random-id": "latest",
     "socket.io": "^1.4.8",
     "workerpool": "^2.3.0"
