--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "material-ui": "^0.17.4",
     "md5": "^2.2.1",
     "mocha": "^2.2.5",
+    "moment": "latest",
     "random-number": "0.0.7",
     "raw-loader": "^0.5.1",
     "react": "^15.3.0",
@@ -84,8 +85,7 @@
     "webpack-async-await": "^1.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-shell-plugin": "^0.5.0",
-    "workerio": "github:TobiaszCudnik/workerio",
-    "moment": "latest"
+    "workerio": "github:TobiaszCudnik/workerio"
   },
   "prettier": {
     "singleQuote": true,
