--- a/examples/restaurant/package.json
+++ b/examples/restaurant/package.json
@@ -13,7 +13,7 @@
     "delay": "^2.0.0",
     "random-int": "^1.0.0",
     "lodash": "^4.17.4",
-    "asyncmachine-inspector": "^0.3.3",
-    "asyncmachine": "latest"
+    "asyncmachine-inspector": "^0.3.9",
+    "asyncmachine": "^3.2.3"
   }
 }
