--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asyncmachine-inspector",
-  "version": "0.3.8",
+  "version": "0.3.9-2",
   "description": "Inspector and a debugger for AsyncMachine",
   "author": "Tobiasz Cudnik",
   "repository": {
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "acorn": "^4.0.3",
-    "asyncmachine": "^3.1.0",
+    "asyncmachine": "^3.2.3",
     "awesome-typescript-loader": "^3.2.3",
     "chai": "^3.0.0",
     "chai-xml": "^0.3.0",
