`make dts` to bundle d.ts files (doesnt work)

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "deepmerge": "^2.0.1",
     "del": "^2.0.2",
     "download-as-file": "^1.1.0",
+    "dts-bundle": "^0.7.3",
     "eventemitter3": "^1.1.1",
     "graphs-tob": "^2.0.0",
     "jointjs": "^2.0.1",
