--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -36,6 +36,8 @@
     "jsondiffpatch": "TobiaszCudnik/jsondiffpatch",
     "uuid": "^3.1.0",
     "graphs-tob": "^2.0.0",
+    "underscore": "^1.8.3",
+    "asyncmachine": "^3.2.3",
     "socket.io-client": "^2.0.4"
   }
 }
