--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -38,6 +38,7 @@
     "graphs-tob": "^2.0.0",
     "underscore": "^1.8.3",
     "asyncmachine": "^3.2.3",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "workerpool": "^2.3.0"
   }
 }
