--- a/pkg/logger/package.json
+++ b/pkg/logger/package.json
@@ -30,6 +30,7 @@
   },
   "main": "logger.js",
   "browser": "browser.js",
+  "types": "logger.d.ts",
   "dependencies": {
     "assert": "latest",
     "eventemitter3": "^1.1.1",
