--- a/examples/restaurant/package.json
+++ b/examples/restaurant/package.json
@@ -14,6 +14,9 @@
     "random-int": "^1.0.0",
     "lodash": "^4.17.4",
     "asyncmachine-inspector": "^0.3.9",
-    "asyncmachine": "^3.2.3"
+    "asyncmachine": "^3.2.3",
+    "webpack": "^3.10.0",
+    "awesome-typescript-loader": "^3.2.3",
+    "ami-logger": "^0.3.7"
   }
 }
